hphp/hack/test/typecheck/unknown_class.php.exp
File "unknown_class.php", line 6, characters 12-12:
Unbound name: `D` (an object type) (Naming[2049])
